--- a/app/styles/sass/blocks/components/header.scss
+++ b/app/styles/sass/blocks/components/header.scss
@@ -19,6 +19,7 @@
   &-btn {
     &.opened {
       span {
+        margin: 4.5px 0;
         &:first-of-type {
           transform: rotate(45deg) translate(25%, 0);
         }
@@ -35,6 +36,12 @@
       transition: .3s linear;
       &:first-of-type {}
       &:last-of-type {}
+    }
+  }
+  &-sign {
+    margin-right: 115px;
+    @include media-max(1199) {
+      margin-right: 60px;
     }
   }
 }
